# hw-wasm

./: .gitignore  .hgignore  CMakeLists.txt  Dockerfile.wasm  README-WASM.md  README.md  WASM_PORT_PLAN.md  WEB_FRONTEND_SPEC.md  build-qt-wasm.ps1  build-was-docker.sh  build.ps1  index.html  serve-frontend.ps1  serve.bat  serve.ps1
.github/workflows/: ci.yml
.kiro/steering/: wsl.md
cmake_modules/: CMakeTestPascalCompiler.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake  FindSDL2_net.cmake  FindSDL2_ttf.cmake
frontend-qt6/: CMakeLists.txt  game.cpp  game.h  gameuiconfig.cpp  hwform.cpp  main.cpp
frontend-qt6/model/: gameSchemeModel.cpp
frontend-qt6/net/: netserver.cpp  netserver.h  newnetclient.cpp  newnetclient.h  tcpBase.cpp  tcpBase.h
frontend-qt6/ui/page/: pageeditteam.cpp  pagemain.cpp  pagevideos.cpp
frontend-qt6/ui/widget/: about.cpp  feedbackdialog.cpp  gamecfgwidget.cpp  gamecfgwidget.h  teamselect.h
frontend-qt6/util/: DataManager.cpp  KeyMap.h  SDLInteraction.cpp  SDLInteraction.h  physfs_integration.cpp  physfs_integration.h
gameServer/: CMakeLists.txt
hedgewars/: ArgParsers.pas  CMakeLists.txt  SDLh.pas  hwengine.pas  uAI.pas  uAI2.pas  uCommandHandlers.pas  uConsts.pas  uLandUtils.pas  uMatrix.pas  uRust.pas  uSound.pas  uVariables.pas
misc/liblua/: CMakeLists.txt
misc/libphyslayer/: CMakeLists.txt
project_files/hwc/: CMakeLists.txt
project_files/hwc/rtl/: fpcrtl.h  pmath.h
project_files/web/: pre.js  shell.html  sw.js
release/: hwengine.html  hwengine.js  hwengine.wasm  sw.js
release/web-frontend/: index.html  main.js
release/web-frontend/data/: defaults.js  schemes.js
release/web-frontend/pages/: main-menu.js  missions.js  settings.js  team-editor.js
release/web-frontend/ui/: core.js  icon-picker.js  scene.js  theme.js  widgets-adv.js
rust/landgen/src/wavefront_collapse/: generator.rs  tile_image.rs  wavefront_collapse.rs
rust/lib-hedgewars-engine/: Cargo.toml
rust/lib-hwengine-future/: Cargo.toml
rust/lib-hwengine-future/src/: lib.rs
rust/vec2d/src/: lib.rs
share/hedgewars/Data/: wfc_templates.toml
share/hedgewars/Data/Locale/: CMakeLists.txt
tools/: split_wasm_data_pack.py  trim_wasm_web_runtime_assets.py
tools/pas2c/: CMakeLists.txt  Pas2C.hs
tools/winbuild/: Dockerfile  HOWTO  build-hedgewars.cmd  build-physfs.cmd  build-qt.cmd  cabal.project.local  compose.yml  config.toml  fpc.cfg
web/: app.js  index.html
web-frontend/: assets.js  index.html  main.js
web-frontend/data/: config-builder.js  defaults.js  storage.js  weapons.js
web-frontend/pages/: controls.js  local-game.js  main-menu.js  missions.js  page-base.js  scheme-editor.js  settings.js  team-editor.js  weapon-editor.js
web-frontend/ui/: core.js  icon-picker.js  scene.js  scrollbar.js  theme.js  widgets-adv.js  widgets.js
web-frontend/util/: audio.js  input.js  math.js  namegen.js
